# AeroShield

./: .gitignore  QUICKSTART.md  README.md  STRUCTURE.md  demo.md  docker-compose.yml  imp.md
.github/workflows/: ci-cd.yml
backend/: Dockerfile  README.md  alembic.ini  demo.py  fix_schema.py  main.py  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 001_initial.py  002_update_user_schema.py
backend/api/: __init__.py
backend/api/v1/: __init__.py  ai.py  blockchain.py  claims.py  policies.py  pool.py  triggers.py  users.py  webhooks.py
backend/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  redis.py  security.py
backend/models/: __init__.py  ai_prediction.py  claim.py  fdc_event.py  policy.py  pool.py  user.py
backend/schemas/: __init__.py  ai_prediction.py  base.py  claim.py  fdc.py  policy.py  pool.py  user.py
backend/services/: __init__.py
backend/services/ai/: __init__.py  gemini_agent.py  risk_scoring.py
backend/services/blockchain/: __init__.py  fdc_client.py  ftso_client.py  smart_account.py
backend/services/insurance/: __init__.py  claims_engine.py  pool_manager.py
backend/tests/: conftest.py  test_api.py  test_services.py
contracts/: README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/contracts/core/: ClaimProcessor.sol  FDCFlightVerifier.sol  FTSOv2Consumer.sol  InsurancePool.sol  PolicyManager.sol
contracts/contracts/interfaces/: IFlareDataConnector.sol
contracts/contracts/libraries/: FlightDataLib.sol
contracts/contracts/mocks/: MockFDC.sol  MockTokens.sol
contracts/scripts/: demo.ts  deploy.ts  deployFlareContracts.ts  eventListener.ts  interactFTSO.ts  syncToFrontend.ts
contracts/scripts/fdc/: prepareAttestation.ts  submitAttestation.ts  verifyAttestation.ts
contracts/test/: AeroShield.test.ts
contracts/typechain-types/: hardhat.d.ts  index.ts
contracts/typechain-types/contracts/: index.ts
docs/: README.md
frontend/: Dockerfile  jest.config.js  jest.setup.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: middleware.ts
frontend/src/__tests__/: components.test.tsx  pages.test.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
(+101 files in other folders)
