[project]
name = "aeroshield-backend"
version = "1.0.0"
description = "AI-Augmented Parametric Travel Insurance on Flare Network"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "AeroShield Team", email = "team@aeroshield.io" }
]
keywords = ["flare", "insurance", "parametric", "blockchain", "ai", "travel"]

dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "web3>=7.6.0",
    "eth-account>=0.13.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "google-generativeai>=0.8.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "redis>=5.2.0",
    "celery>=5.4.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.19.0",
    "prometheus-client>=0.21.0",
    "psycopg[binary]>=3.2.0",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.18",
    "orjson>=3.10.0",
    "pyjwt>=2.10.0",
    "cryptography>=44.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "faker>=33.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "models", "schemas", "services"]

[tool.hatch.build.targets.sdist]
include = [
    "/api",
    "/core",
    "/models",
    "/schemas",
    "/services",
    "/main.py",
    "/README.md",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=. --cov-report=term-missing"
